RESOLVED FIXED67206
fast/workers/worker-script-error.html fails on Chromium after r94061
https://bugs.webkit.org/show_bug.cgi?id=67206
Summary fast/workers/worker-script-error.html fails on Chromium after r94061
Yury Semikhatsky
Reported 2011-08-30 09:23:40 PDT
The test started failing on Chromium after http://trac.webkit.org/changeset/94061
Attachments
Patch (6.69 KB, patch)
2011-08-30 09:30 PDT, Yury Semikhatsky
no flags
Patch (7.00 KB, patch)
2011-08-30 23:53 PDT, Yury Semikhatsky
no flags
Patch (13.30 KB, patch)
2011-08-31 01:38 PDT, Yury Semikhatsky
dimich: review+
Yury Semikhatsky
Comment 1 2011-08-30 09:26:34 PDT
Yury Semikhatsky
Comment 2 2011-08-30 09:30:09 PDT
Dmitry Titov
Comment 3 2011-08-30 10:46:10 PDT
Comment on attachment 105642 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=105642&action=review > Source/WebCore/bindings/v8/V8AbstractEventListener.cpp:185 > // FIXME: Add example, and reference to bug entry. Since this code is being modified, can we address the FIXME here?
Yury Semikhatsky
Comment 4 2011-08-30 23:47:16 PDT
Comment on attachment 105642 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=105642&action=review >> Source/WebCore/bindings/v8/V8AbstractEventListener.cpp:185 >> // FIXME: Add example, and reference to bug entry. > > Since this code is being modified, can we address the FIXME here? I think we should simply remove this FIXME as this behavior is unambiguously described in the spec( http://www.w3.org/TR/html5/webappapis.html#event-handler-attributes) which reads as following: "When an event handler's Function object is invoked, its call() callback must be invoked with one argument, set to the Event object of the event in question. The handler's return value must then be processed as follows: If the event type is mouseover If the return value is a boolean with the value true, then the event must be canceled. If the event object is a BeforeUnloadEvent object If the return value is a string, and the event object's returnValue attribute's value is the empty string, then set the returnValue attribute's value to the return value. Otherwise If the return value is a boolean with the value false, then the event must be canceled."
Yury Semikhatsky
Comment 5 2011-08-30 23:53:53 PDT
Yury Semikhatsky
Comment 6 2011-08-31 01:38:05 PDT
Yury Semikhatsky
Comment 7 2011-08-31 01:38:44 PDT
(In reply to comment #6) > Created an attachment (id=105760) [details] > Patch Added a couple more tests for window.onerror.
Yury Semikhatsky
Comment 8 2011-09-06 23:52:44 PDT
Note You need to log in before you can comment on or make changes to this bug.