fast/workers/worker-script-error.html fails on Chromium after r94061 https://bugs.webkit.org/show_bug.cgi?id=67206

Source/WebCore:

Default action should be prevented if window.onerror returned true and stay
not prevented otherwise.

Reviewed by Dmitry Titov.

Tests: fast/events/window-onerror14.html
       fast/events/window-onerror15.html
       fast/events/window-onerror16.html

* bindings/v8/V8AbstractEventListener.cpp:
(WebCore::V8AbstractEventListener::invokeEventHandler):
(WebCore::V8AbstractEventListener::shouldPreventDefault): allow specific
event listeners to decide when to prevent default action based on the handler
return value.
* bindings/v8/V8AbstractEventListener.h:
* bindings/v8/V8WindowErrorHandler.cpp:
(WebCore::V8WindowErrorHandler::callListenerFunction):
(WebCore::V8WindowErrorHandler::shouldPreventDefault):
* bindings/v8/V8WindowErrorHandler.h:
* bindings/v8/V8WorkerContextErrorHandler.cpp:
(WebCore::V8WorkerContextErrorHandler::callListenerFunction):
(WebCore::V8WorkerContextErrorHandler::shouldPreventDefault):
* bindings/v8/V8WorkerContextErrorHandler.h:

LayoutTests:

Add a couple more tests for window.onerror handler that check whether
error message is printed to the console pending on the handler return
value.

Reviewed by Dmitry Titov.

* fast/events/window-onerror14-expected.txt: Added.
* fast/events/window-onerror14.html: Added.
* fast/events/window-onerror15-expected.txt: Added.
* fast/events/window-onerror15.html: Added.
* fast/events/window-onerror16-expected.txt: Added.
* fast/events/window-onerror16.html: Added.
* platform/chromium/fast/events/window-onerror16-expected.txt: Added.

Canonical link: https://commits.webkit.org/83542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94643 268f45cc-cd09-0410-ab3c-d52691b4dbfc