Source/WebCore/bindings/v8/V8AbstractEventListener.cpp
@@ -181,10 +181,15 @@ void V8AbstractEventListener::invokeEventHandler(ScriptExecutionContext* context
     if (!returnValue->IsNull() && !returnValue->IsUndefined() && event->storesResultAsString())
         event->storeResult(toWebCoreString(returnValue));
 
-    // Prevent default action if the return value is false;
-    // FIXME: Add example, and reference to bug entry.
-    if (m_isAttribute && returnValue->IsBoolean() && !returnValue->BooleanValue())
+    if (m_isAttribute && shouldPreventDefault(returnValue))
         event->preventDefault();
+}
+
+bool V8AbstractEventListener::shouldPreventDefault(v8::Local<v8::Value> returnValue)
+{
+    // Prevent default action if the return value is false in accord with the spec
+    // http://www.w3.org/TR/html5/webappapis.html#event-handler-attributes
+    return returnValue->IsBoolean() && !returnValue->BooleanValue();
 }
 
 v8::Local<v8::Object> V8AbstractEventListener::getReceiverObject(Event* event)
