Source/WebCore/bindings/v8/V8WindowErrorHandler.h
@@ -48,6 +48,7 @@ private:
     V8WindowErrorHandler(v8::Local<v8::Object> listener, bool isInline, const WorldContextHandle& worldContext);
 
     virtual v8::Local<v8::Value> callListenerFunction(ScriptExecutionContext*, v8::Handle<v8::Value> jsEvent, Event*);
+    virtual bool shouldPreventDefault(v8::Local<v8::Value> returnValue);
 };
 
 } // namespace WebCore
